# living-ai

./: .gitignore  CONCRETE_PROBLEM.md  Dockerfile  README.md  RELEASE_NOTES.md  check_backends.py  check_system.py  distributed_memory.json  docker-compose.yml  living_ai.db  main.py  observatory_server.py  pyproject.toml  requirements.txt  run-compose.bat  run-compose.sh  run_ai.py  self_model.json  semantic_memory.json  test.py  test_bus.py  test_llm.py  validation_harness.py
adapters/: memos_adapter.py
core/: action_dispatcher.py  action_engine.py  adaptive_behavior_engine.py  advanced_reasoning_engine.py  agent_loop_engine.py  agent_orchestrator.py  alert_ingestor.py  attention_engine.py  attention_manager.py  autonomy_engine.py  belief_engine.py  cognitive_kernel.py  cognitive_reasoning_engine.py  cognitive_state.py  command_executor.py  consciousness_engine.py  context_engine.py  decision_engine.py  distributed_memory_manager.py  emotion_engine.py  environment_awareness.py  event_bus.py  event_emitter.py  evolution_engine.py  filesystem_tool.py  goal_engine.py  goal_manager.py  identity_engine.py  internal_simulation_engine.py  internal_thought_loop.py  learning_engine.py  learning_feedback_loop.py  llm_router.py  memory_db.py  memory_engine.py  memory_priority.py  meta_cognition.py  multi_agent_runtime.py  multi_path_reasoning.py  natural_response_engine.py  (+22 more)
living_ai/: __init__.py
scripts/: import_test.py  print_main_attrs.py  run_cognitive_tests.py  validate_memory_fix.py
templates/: cognitive_observatory.html
tests/: conftest.py  test_ingest.py  (+5 more)
(+7 files in other folders)
