[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-ai"
version = "0.1.0"
description = "Persistent Adaptive Intelligence Framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Charles Washington Juma" }
]

keywords = [
    "artificial-intelligence",
    "agi",
    "autonomous-agents",
    "memory",
    "reasoning",
    "cognitive-architecture",
    "adaptive-ai",
    "persistent-ai",
    "living-ai"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "redis",
    "psycopg2-binary"
]

[project.urls]
Homepage = "https://github.com/SAGEWRL/living-ai"
Repository = "https://github.com/SAGEWRL/living-ai"
Documentation = "https://github.com/SAGEWRL/living-ai"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "adapters*"]
